--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .vs/AppQuanLy/v15/Server/sqlite3/storage.ide
 .vs/AppQuanLy/v15/Server/sqlite3/db.lock
 .vs/AppQuanLy/v15/Server/sqlite3/storage.ide-shm
+.vs/AppQuanLy/v15/.suo
